PersonFollwer_ROS2/src/log/build_2024-02-20_17-45-47/opencv_tools/stderr.log
  File "/home/ed/ros2_ws/src/install/opencv_tools/lib/python3.10/site-packages/opencv_tools/motor_controller.py", line 4
    MAXPWM = 
             ^
SyntaxError: invalid syntax

